--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
               <div class="col-12 col-lg-4">
                 <h4>Summary</h4>
                 <p>
-                  <a href="https://www.campusmapp.ca">CampusMApp</a> is an ongoing project that wants to make navigating campuses easier. I worked to develop for the app a way for users to upload their class schedule either by search selection or OCR. To accomplish this, my team and I first created a project plan after discussions with the CampusMApp staff to lay out realistic goals for our given timeline(1 semester). High-fidelity prototypes were then developed of what the scheduler could look like to recevie feedback from the clients as well as students(potential users). We then worked to develop the the scheduler in Xcode, which could then be implemented into the CampusMApp app.
+                  <a href="https://www.campusmapp.ca" target="_blank">CampusMApp</a> is an ongoing project that wants to make navigating campuses easier. I worked to develop for the app a way for users to upload their class schedule either by search selection or OCR. To accomplish this, my team and I first created a project plan after discussions with the CampusMApp staff to lay out realistic goals for our given timeline(1 semester). High-fidelity prototypes were then developed of what the scheduler could look like to recevie feedback from the clients as well as students(potential users). We then worked to develop the the scheduler in Xcode, which could then be implemented into the CampusMApp app.
                 </p>
 
                 <br>
