--- a/projects.html
+++ b/projects.html
@@ -186,6 +186,33 @@
           </div>
         </div>
 
+        <div class="col-md d-flex justify-content-center align-items-center all-project enti-project ui-design-project mb-5">
+          <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
+
+            <!--Link to full Project Desription  -->
+            <div class="card-body" data-toggle="modal" data-target="#RCA-project">
+
+              <!-- Project: Image  -->
+              <img src="./imgs/projects/RCA/WebsiteRedesign.png" class="img-fluid">
+
+              <!-- Project: Title  -->
+              <h5 class="card-title">Ramsay - Technology Consulting Project</h5>
+
+              <!-- Project: Brief Descrption -->
+              <p class="card-text"> A consulting project done for a non-profit community assocation, to  provide recommendations on technology solutions that would solve problems faced by the staff, and improve the experience for their community members...</p>
+            </div>
+
+            <!--Project: Tags  -->
+            <div class="card-footer">
+              <!-- UI Design Tag  -->
+              <button name="ui-design" type="button" class="btn btn-primary btn-sm ui-design-btn" style="font-size : 0.6rem">UI Design</button>
+              <!-- Entrepreneurship Tag  -->
+              <button name="enti" type="button" class="btn btn-primary btn-sm enti-btn" style="font-size : 0.6rem">Entrepreneurship</button>
+
+            </div>
+          </div>
+        </div>
+
         <!--Highlighted Projects: Source Parser Project  -->
         <div class="col-md d-flex justify-content-center align-items-center all-project enti-project ui-design-project mb-5">
           <div class="card shadow-sm" style="width: 18rem; height: 30rem;">
@@ -469,13 +496,141 @@
 
       <!-- Project: Full Descriptions -->
 
+      <!-- Ramsay - Technology Consulting Project - Popup Window  -->
+      <div class="modal fade" id="RCA-project" tabindex="-1" role="dialog" aria-labelledby="MB-label" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+
+
+              <h2 class="modal-title" id="MB-label"> Ramsay - Technology Consulting Project</h2>
+
+              <!-- Button: closes window  -->
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+
+
+              <div class="row">
+                <div class="col-12 col-lg-6">
+                  <h4>Summary</h4>
+                  <p>
+                     A consulting project done for a non-profit community assocation, to  provide recommendations on technology solutions that would solve problems faced by the staff, and improve the experience for their community members. A accomplish this, met with staff of the Ramsay Community Association(RCA) to first discuss the problems they were facing so we could determine the best solutions. We identified 5 key problem areas that
+                  </p>
+
+                  <br>
+                  <br>
+
+                </div>
+
+                <div class="col-12 col-lg-6 d-flex justify-content-around"">
+
+
+                    <figure class="figure" style="max-width: 90%;">
+                      <img src="./imgs/projects/RCA/WebsiteRedesign.png" class="img-fluid">
+                      <figcaption class="figure-caption text-center"> (About Page) </figcaption>
+                    </figure>
+
+
+                </div>
+
+
+
+                <div class="col-12 col-md-6 py-3">
+
+                  <h4> Problem Areas Identified</h4>
+                  <ul>
+                    <li> Internal Communication <small>(File Sharing & Email Management)</small></li>
+                    <li> External Communication <small>(Social Media Management)</small></li>
+                    <li> Website <small>(Modernized Design & Security)</small></li>
+                    <li> Online Applications and Database <small>(Automating Information Collection)</small></li>
+                    <li> Payment <small>(Online Payment Management)</small></li>
+
+                  </ul>
+
+                </div>
+
+                <div class="col-12 col-md-6 py-3">
+                  <h4> Possible Solutions Identified & Researched</h4>
+                  <ul>
+                    <li> Google Business Suite</li>
+                    <li> Hootsuite & Buffer</li>
+                    <li> Wix, Google Sites, & WordPress</li>
+                    <li> AirTable</li>
+                    <li> Square, Stripe, & Paypal</li>
+                  </ul>
+                </div>
+
+                <div class="col-12 col-md-6 py-3">
+                  <h4>My Roles in the Project</h4>
+
+                  <ul>
+                    <li> Met with RCA staff to discuss  </li>
+                    <li>Decide and research on solutions that would </li>
+                    <li> Discussed and researched the best way to address the problems, split up the work, and go forward with the project</li>
+                    <li> Researched and provided recommendations on the internal communication </li>
+                    <li> Researched and provided recommendations on website</li>
+                    <li> Culminated research in written report that summarized the research and provided the clients with technology solutions they could implement to solve their problems</li>
+                  </ul>
+
+
+
+                  <h4> What was implemented?</h4>
+
+                  <ul>
+                    <li> My research found that since they were a non-profit, the organization qualified for a the Google Suite for non-profits. Migrating to the Google ecosystem would solve many of the email management issues they were struggling with, and so my recommendation outlined the benefits of implementing the G Suite </li>
+                    <li> My research on their website  </li>
+                  </ul>
+
+
+                </div>
+
+
+
+                <div class="col-12 col-md-6 py-3">
+                  <h4>Screenshots from the Project</h4>
+                  <div class="d-flex justify-content-center">
+                    <figure class="figure">
+                      <img src="./imgs/projects/NannyShack/NannyShackAdmin.png" class="figure-img img-fluid">
+                      <figcaption class="figure-caption text-center"> (Initial administration page for viewing, adding, and removing clients) </figcaption>
+                    </figure>
+                  </div>
+
+                  <br>
+                  <br>
+                </div>
+
+
+                <div class="col-12">
+                  <br>
+                  <br>
+                  <h4>What I Learned</h4>
+                  <p> This consulting project helped me discover a lot of new technology solutions. Having a client in mind with real needs also brought new challenges to the process as I had to  </p>
+                </div>
+
+              </div>
+
+
+            </div>
+            <div class="modal-footer">
+              <!-- Button opens new page showing repository -->
+              <a class="btn btn-secondary disabled"href="#" target="_blank"><img src="./imgs/Github-Icon.png" style="height: 1.5rem; width: 1.5rem"> Private Repository</a>
+
+              <!-- Button: closes window  -->
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Nanny Shack - Popup Window  -->
       <div class="modal fade" id="NannyShack-project" tabindex="-1" role="dialog" aria-labelledby="MB-label" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
             <div class="modal-header">
 
-              <!-- Project: Campus MApp - Scheduler Extension  -->
               <h2 class="modal-title" id="MB-label"> The Nanny Shack</h2>
 
               <!-- Button: closes window  -->
@@ -735,7 +890,7 @@
               <div class="col-12 col-lg-4">
                 <h4>Summary</h4>
                 <p>
-                  <a href="https://www.campusmapp.ca">CampusMApp</a> is an ongoing project that wants to make navigating campuses easier. I worked to develop for the app a way for users to upload their class schedule either by search selection or OCR. To accomplish this, my team and I first created a project plan after discussions with the CampusMApp staff to lay out realistic goals for our given timeline(1 semester). High-fidelity prototypes were then developed of what the scheduler could look like to recevie feedback from the clients as well as students(potential users). We then worked to develop the the scheduler in Xcode, which could then be implemented into the CampusMApp app.
+                  <a href="https://www.campusmapp.ca" target="_blank">CampusMApp</a> is an ongoing project that wants to make navigating campuses easier. I worked to develop for the app a way for users to upload their class schedule either by search selection or OCR. To accomplish this, my team and I first created a project plan after discussions with the CampusMApp staff to lay out realistic goals for our given timeline(1 semester). High-fidelity prototypes were then developed of what the scheduler could look like to recevie feedback from the clients as well as students(potential users). We then worked to develop the the scheduler in Xcode, which could then be implemented into the CampusMApp app.
                 </p>
 
                 <br>
